--- a/SPS Website/css/business-casual.css
+++ b/SPS Website/css/business-casual.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Arial","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url('../img/phy1.jpg') no-repeat center center fixed;
+    background: url('../img/phy1.jpg') center fixed;
    /* background-image: linear-gradient(to bottom, rgba(1,1,1,0.6),rgba(0,0,0,0.6));*/
   
     -webkit-background-size: cover;
@@ -39,6 +39,45 @@ hr {
     max-width: 400px;
     border-color: #999999;
 }
+
+/*Dropdown Officer Menu */
+        ul{
+            padding: 0;
+            list-style: none;
+            background: #f2f2f2;
+        }
+        ul li{
+            display: inline-block;
+            position: relative;
+            line-height: 21px;
+            text-align: left;
+        }
+        ul li a{
+            display: block;
+            padding: 8px 25px;
+            color: #333;
+            text-decoration: none;
+        }
+        ul li a:hover{
+            color: #fff;
+            background: #939393;
+        }
+        ul li ul.dropdown{
+            min-width: 100%; /* Set width of the dropdown */
+            background: #f2f2f2;
+            display: none;
+            position: absolute;
+            z-index: 999;
+            left: 0;
+        }
+        ul li:hover ul.dropdown{
+            display: block; /* Display the dropdown */
+        }
+        ul li ul.dropdown li{
+            display: block;
+        }
+
+
 
 .brand,
 .address-bar {
